--- a/app/src/main/res/layout/fragment_instructions.xml
+++ b/app/src/main/res/layout/fragment_instructions.xml
@@ -10,6 +10,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_margin="20dp"
         tools:context=".screens.instructions.InstructionsFragment">
 
         <TextView
@@ -19,7 +20,7 @@
             android:layout_margin="20dp"
             android:gravity="center"
             android:text="@string/instructions_title"
-            android:textSize="45sp"
+            android:textSize="40sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -42,8 +43,8 @@
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
             android:text="@string/next"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/label_two" />
+            app:layout_constraintStart_toStartOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
